build: refine module setup